refactor Travis build settings in gradle build